[package]
name = "mini_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.4.0"
log = "0.4.20"
env_logger = "0.10.0"
chrono = "0"
backtrace = "0.3"
rt_entry = { path = "./rt_entry" }
mio = { version = "0.8.8", features = ["os-poll", "net"] }
memchr = "2.7"
signal-hook = "0.3.1"
