[workspace]
members = [
    "common",
    "cli",
    "app"
]
resolver = "3"

[workspace.package]
name = "mini_app"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
mini_runtime = { path="../../mini_runtime" }
rt_entry = { path="../rt_entry" }
memchr = "2.7"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version="1.0", features=["derive"]}
serde_json = "1.0"
